# vrjuggler-windows-binaries

./: .gitignore  CMakeLists.txt  ChangeLog  README  README.mkd  README.txt  SConstruct  Usecppdom.cmake.in  cleanup-installation.sh  cppdom.spec  cppdomBuildTreeSettings.cmake.in  cppdomConfig.cmake.in  cppdomConfigVersion.cmake.in  vc9-cmd-prompt-here.cmd  visual-studio-ide-here.cmd  vrjconfig.cmd  vrpn_Local_HIDAPI.C
cmake/: Findcppdom.cmake
cppdom/: CMakeLists.txt  SConscript  cppdom.cpp  version.h.in
doc/: cppdom.doxy
include/: audiere.h  omniconfig.h  omnithread.h  vrpn_Configure.h
include/COS/: COS_sysdep.h
include/cluster/: ClusterDelta.h  ClusterDepChecker.h  ClusterException.h  ClusterManager.h  ClusterNetwork.h  ClusterPlugin.h  ClusterPluginPtr.h  ConfigHandler.h  ConfigHandlerPtr.h  PluginConfig.h
include/cluster/Packets/: ConfigPacket.h  ConfigPacketPtr.h  DataPacket.h  DataPacketPtr.h  DeviceAck.h  DeviceAckPtr.h  EndBlock.h  EndBlockPtr.h  Header.h  HeaderPtr.h  Packet.h  PacketFactory.h  PacketPtr.h
include/cppdom/: SpiritParser.h  config.h  cppdom.h  predicates.h  shared_ptr.h  version.h  xmlparser.h  xmltokenizer.h
include/cppdom/ext/: OptionRepository.h
include/gadget/: AutoLink.h  InputLogger.h  InputLoggerPtr.h  InputManager.h  NetworkManager.h  Node.h  NodePtr.h  PacketHandler.h  PacketHandlerPtr.h  ProxyDepChecker.h  ProxyFactory.h  Reactor.h  gadgetConfig.h  gadgetDefines.h  gadgetParam.h
include/gadget/Devices/: DriverConfig.h
include/gadget/Type/: Analog.h  AnalogData.h  AnalogInterface.h  AnalogProxy.h  AnalogProxyPtr.h  AnalogPtr.h  BaseTypeFactory.h  Command.h  CommandInterface.h  CommandProxy.h  CommandProxyPtr.h  CommandPtr.h  DeviceConstructor.h  DeviceConstructorBase.h  DeviceFactory.h  DeviceInterface.h  Digital.h  DigitalData.h  DigitalInterface.h  DigitalProxy.h  Gesture.h  (+40 more)
include/gmtl/: AABox.h  AABoxOps.h  AxisAngle.h  AxisAngleOps.h  Comparitors.h  Config.h  Containment.h  Coord.h  CoordOps.h  Defines.h  EulerAngle.h  EulerAngleOps.h  Frustum.h  FrustumOps.h  Generate.h  Helpers.h  Intersection.h  LineSeg.h  LineSegOps.h  Math.h  Matrix.h  MatrixOps.h  OOBox.h  Output.h  ParametricCurve.h  Plane.h  PlaneOps.h  Point.h  Quat.h  QuatOps.h  Ray.h  RayOps.h  Sphere.h  SphereOps.h  Tri.h  TriOps.h  Vec.h  VecBase.h  VecExprMeta.h  VecOps.h  (+4 more)
include/jccl/: AutoLink.h  jcclConfig.h  jcclDefines.h  jcclParam.h
include/omniORB4/: BiDirPolicy.h  CORBA.h  CORBA_AbstractBase.h  CORBA_Any.h  CORBA_Any_vartypes.h  CORBA_BOA.h  CORBA_Context.h  CORBA_Current.h  CORBA_DomainManager.h  CORBA_Environment.h  CORBA_Exception.h  CORBA_ExceptionList.h  CORBA_Fixed.h  CORBA_LocalObject.h  CORBA_LocalObject_vartypes.h  CORBA_NamedValue.h  CORBA_ORB.h  CORBA_Object.h  CORBA_Object_vartypes.h  CORBA_Policy.h  CORBA_Principal.h  CORBA_Request.h  CORBA_ServerRequest.h  CORBA_String.h  CORBA_TypeCode.h  CORBA_TypeCode_member.h  CORBA_UnknownUserException.h  CORBA_ValueBase.h  CORBA_ValueBase_vartypes.h  CORBA_basetypes.h  CORBA_primitive_types.h  CORBA_static_fns.h  CORBA_sysdep.h  CORBA_sysdep_auto.h  CORBA_sysdep_trad.h  CORBA_vartypes.h  GIOP.h  IIOP.h  IOP.h  IOP_C.h  (+51 more)
include/omnithread/: VxThread.h  mach.h  nt.h  posix.h  pthread_nt.h  solaris.h
include/snx/: AutoLink.h  Endian.h  ISoundImplementation.h  PluginConfig.h  SoundAPIInfo.h  SoundFactory.h  SoundHandle.h  SoundImplementation.h  SoundInfo.h  StubSoundImplementation.h  snxConfig.h  snxDefines.h  snxParam.h  sonix.h
include/tweek/: AutoLink.h  tweek.h  tweekConfig.h  tweekDefines.h  tweekParam.h
include/vpr/: AutoLink.h  System.h  SystemBase.h  vpr.h  vprConfig.h  vprDefines.h  vprDomain.h  vprParam.h  vprTypes.h
include/vrj/: AutoLink.h  vrjConfig.h  vrjDefines.h  vrjParam.h
lib/: Usecppdom.cmake  audiere.lib  boost_atomic-vc110-mt-1_54.lib  boost_atomic-vc110-mt-gd-1_54.lib  boost_chrono-vc110-mt-1_54.lib  boost_chrono-vc110-mt-gd-1_54.lib  boost_context-vc110-mt-1_54.lib  boost_context-vc110-mt-gd-1_54.lib  boost_date_time-vc110-mt-1_54.lib  boost_date_time-vc110-mt-gd-1_54.lib  boost_date_time-vc90-mt-gd.lib  boost_date_time-vc90-mt.lib  boost_filesystem-vc110-mt-1_54.lib  boost_filesystem-vc110-mt-gd-1_54.lib  boost_filesystem-vc90-mt-1_45.lib  boost_filesystem-vc90-mt-gd-1_45.lib  boost_graph-vc110-mt-1_54.lib  boost_graph-vc110-mt-gd-1_54.lib  boost_graph-vc90-mt-1_45.lib  boost_graph-vc90-mt-gd-1_45.lib  boost_iostreams-vc110-mt-1_54.lib  boost_iostreams-vc110-mt-gd-1_54.lib  boost_iostreams-vc90-mt-gd.lib  boost_iostreams-vc90-mt.lib  boost_locale-vc110-mt-1_54.lib  boost_locale-vc110-mt-gd-1_54.lib  boost_log-vc110-mt-1_54.lib  boost_log-vc110-mt-gd-1_54.lib  boost_log_setup-vc110-mt-1_54.lib  boost_log_setup-vc110-mt-gd-1_54.lib  boost_math_c99-vc110-mt-1_54.lib  boost_math_c99-vc110-mt-gd-1_54.lib  boost_math_c99-vc90-mt-1_45.lib  boost_math_c99-vc90-mt-gd-1_45.lib  boost_math_c99f-vc110-mt-1_54.lib  boost_math_c99f-vc110-mt-gd-1_54.lib  boost_math_c99f-vc90-mt-1_45.lib  boost_math_c99f-vc90-mt-gd-1_45.lib  boost_math_c99l-vc110-mt-1_54.lib  boost_math_c99l-vc110-mt-gd-1_54.lib  (+145 more)
lib/debug/: gadget-2_0_1.lib  jccl-1_4_1.lib  sonix-1_4_1.lib  tweek-1_4_1.lib  vpr-2_2_1.lib  vrj-3_0_1.lib  vrj_d3d-3_0_1.lib  vrj_ogl-3_0_1.lib  vrj_pf-3_0_1.lib
lib/flagpoll/: boost.fpc  boost_filesystem.fpc  boost_program_options.fpc  boost_signals.fpc  boost_system.fpc  cppdom.fpc  gadgeteer.fpc  jccl.fpc  sonix.fpc  tweek-java.fpc  tweek-python.fpc  tweek.fpc  vpr.fpc  vrjuggler-direct3d.fpc  vrjuggler-opengl.fpc  vrjuggler-performer.fpc  vrjuggler.fpc
lib/pkgconfig/: gmtl.pc
server_src/timecode_generator_server/: adrienne_research.txt
share/flagpoll/: gmtl-0.6.1-noarch.fpc
share/gadgeteer/: ChangeLog  RELEASE_NOTES.txt
share/jccl/: ChangeLog  RELEASE_NOTES.txt
share/sonix/: ChangeLog  README.txt
share/tweek/: ChangeLog  RELEASE_NOTES.txt
share/vpr/: ChangeLog  README.txt  RELEASE_NOTES.txt
share/vrjuggler/: ChangeLog  RELEASE_NOTES.txt
submodules/: upstream-changes.txt
test/: CMakeLists.txt  SConscript  nodetest.cpp  parsetest.cpp
test/suite/: runner.cpp
(+1273 files in other folders)
